<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/roundlayout"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/student_icon"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/main_activity_icon_background"
        android:contentDescription="@string/student"
        android:src="@drawable/student"
        android:focusable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="Student"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/teachers_icon"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@drawable/main_activity_icon_background"
        android:layout_gravity="center_horizontal"

        android:contentDescription="@string/teacher"
        android:src="@drawable/teachers"
        android:focusable="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="Teacher"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/admin_icon"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:clickable="true"
        android:background="@drawable/main_activity_icon_background"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/admin"
        android:src="@drawable/admin"
        android:focusable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="Admin"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textColor="@color/white"
        android:textSize="40sp" />



</LinearLayout>